1. Метод .of [#369142]