@@ -2,7 +2,6 @@ package ru.job4j.stream;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -17,7 +16,7 @@ public class MatrixToListTest {
                 {1, 2, 3},
                 {4, 5, 6}
         };
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6);
         List<Integer> rsl = matrix.arrayToList(matrixInts);
         assertThat(rsl, is(expected));
     }
@@ -28,7 +27,7 @@ public class MatrixToListTest {
                 List.of(1, 2),
                 List.of(3, 4)
         );
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4);
+        List<Integer> expected = List.of(1, 2, 3, 4);
         List<Integer> rsl = matrix.arrayToList(matrixlist);
         assertThat(rsl, is(expected));
     }
